ghc-4335c07/testsuite/tests/rename/should_compile/T7969a.hs
module T7969a where

data T = MkT
