ghc-4335c07/testsuite/tests/rename/should_fail/T5745b.hs
module T5745b where

data T = MkT
data S = MkS
